clusters/danto/apps/pad/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pad
spec:
  selector:
    app: pad
  ports:
    - name: http
      port: 3000
      targetPort: http
    - name: websocket
      port: 3003
      targetPort: websocket
